Fix scrollbar issues

--- a/styles.scss
+++ b/styles.scss
@@ -76,7 +76,7 @@ html, body {
     position: relative; 
     z-index: 0;
     perspective: 120px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .entry {
